# Clash-Prism-Engine

./: .clippy.toml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  Prism_Engine_Final_Architecture.md  README.en.md  README.md  SECURITY.md  prism-schema.json  rustfmt.toml
.github/workflows/: ci.yml  release.yml
benches/: prism_benchmarks.rs
crates/clash-prism-core/: Cargo.toml
crates/clash-prism-core/benches/: prism_benchmarks.rs
crates/clash-prism-core/src/: cache.rs  compiler.rs  error.rs  error_format.rs  executor.rs  failover.rs  ir.rs  json_path.rs  lib.rs  migration.rs  perf.rs  sanitize.rs  scope.rs  serial.rs  source.rs  target.rs  trace.rs  validator.rs
crates/clash-prism-core/src/executor/: expr.rs
crates/clash-prism-core/src/watcher/: mod.rs
crates/clash-prism-core/tests/: e2e_helpers.rs  e2e_tests.rs
crates/clash-prism-core/tests/fixtures/: 00-base-dns.prism.yaml  01-tun-override.prism.yaml  02-rules-prepend-append.prism.yaml  03-proxy-filter-transform.prism.yaml  04-streaming-scoped.prism.yaml  05-default-injection.prism.yaml  06-runtime-field-error.prism.yaml  07-override-conflict.prism.yaml
crates/clash-prism-dsl/: Cargo.toml
crates/clash-prism-dsl/src/: lib.rs  ops.rs  parser.rs  schema.rs
crates/clash-prism-extension/: Cargo.toml
crates/clash-prism-extension/src/: annotation.rs  extension.rs  host.rs  lib.rs  types.rs  variables.rs
crates/clash-prism-extension/tests/: integration_test.rs
crates/clash-prism-plugin/: Cargo.toml
crates/clash-prism-plugin/src/: components.rs  cron_scheduler.rs  failover.rs  hook.rs  hook_result.rs  lib.rs  lifecycle.rs  loader.rs  manifest.rs  permission.rs
crates/clash-prism-script/: Cargo.toml
crates/clash-prism-script/src/: api.rs  lib.rs  limits.rs  runtime.rs  sandbox.rs
crates/clash-prism-script/tests/: runtime_write_tests.rs
crates/clash-prism-smart/: Cargo.toml
crates/clash-prism-smart/src/: config.rs  history.rs  lib.rs  scheduler.rs  scorer.rs
examples/: README.md
examples/basic-usage/: main.rs
examples/plugin-example/: main.js  manifest.json
examples/smart-grouping/: main.rs
examples/smart-selector/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_dsl_parser.rs  fuzz_expr_evaluator.rs  fuzz_yaml_roundtrip.rs
prism-cli/: Cargo.toml
prism-cli/src/: main.rs  ndjson.rs  pid_lock.rs  server.rs
prism-ext/: Cargo.toml
prism-ext/src/: main.rs
prism-ext/templates/: README.md  prism_host.rs
tests/integration/: mod.rs  script_write_integration.rs  smart_selector.rs
