[package]
name = "clash-prism-extension"
version = "0.1.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "UI Extension interface for integrating Prism Engine into Mihomo GUI clients"

[dependencies]
clash-prism-core = { version = "0.1.2" }
clash-prism-dsl = { version = "0.1.0" }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
notify = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []
watcher = ["clash-prism-core/watcher", "notify"]
