[package]
name = "clash-prism-extension"
version = "0.1.5"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "UI Extension interface for integrating Prism Engine into Mihomo GUI clients"

[dependencies]
clash-prism-core = { version = "0.1.3" }
clash-prism-dsl = { version = "0.1.2" }
regex = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
notify = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []
watcher = ["clash-prism-core/watcher", "notify"]
