[package]
name = "clash-prism-script"
description = "Script engine with rquickjs sandbox for Prism Engine"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
persist-store = ["dep:redb"]

[dependencies]
clash-prism-core = { version = "0.1.0" }
rquickjs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
rand = { workspace = true }
glob-match = { workspace = true }
redb = { version = "1.5", optional = true }

[dev-dependencies]
tempfile = { workspace = true }
